[gd_scene load_steps=10 format=3 uid="uid://dmbmcskytu602"]

[ext_resource type="Script" path="res://assets/scripts/level.gd" id="1_3vxnl"]
[ext_resource type="AudioStream" uid="uid://b1dfjsuv6jpnh" path="res://assets/audio/music/exports/space-asteroids.mp3" id="1_h80qk"]
[ext_resource type="PackedScene" uid="uid://bwejn1htvqfta" path="res://scenes/enemy.tscn" id="2_hfbjd"]
[ext_resource type="Texture2D" uid="uid://dky5et8xsdl8c" path="res://assets/imagenes/background/layered/bg-back.png" id="3_6sbm7"]
[ext_resource type="Texture2D" uid="uid://cg87g4qq7nss5" path="res://assets/imagenes/background/layered/bg-stars.png" id="4_bv78q"]
[ext_resource type="Texture2D" uid="uid://c3ru8av2g5dl8" path="res://assets/imagenes/background/layered/bg-planet.png" id="5_26dj7"]
[ext_resource type="PackedScene" uid="uid://cpf6knx4315ig" path="res://scenes/player.tscn" id="6_jxs1i"]
[ext_resource type="PackedScene" uid="uid://b2f48lt6p7id3" path="res://gui.tscn" id="8_10a4s"]

[sub_resource type="Curve2D" id="Curve2D_6g2bm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 272, 0, 0, 0, 0, 0, 272, 160, 0, 0, 0, 0, 280, 160, 0, 0, 0, 0, 280, 0, 0, 0, 0, 0, 272, 0)
}
point_count = 5

[node name="Level" type="Node2D" groups=["Level"]]
script = ExtResource("1_3vxnl")
enemy = ExtResource("2_hfbjd")
metadata/_edit_group_ = true

[node name="Settings" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Settings"]
stream = ExtResource("1_h80qk")
autoplay = true

[node name="Timer" type="Timer" parent="Settings"]
autostart = true

[node name="Backgraund" type="Node" parent="."]

[node name="Back" type="ParallaxBackground" parent="Backgraund"]
offset = Vector2(136, 80)
transform = Transform2D(1, 0, 0, 1, 136, 80)

[node name="ParallaxLayer" type="ParallaxLayer" parent="Backgraund/Back"]
motion_mirroring = Vector2(272, 0)

[node name="Sprite2D" type="Sprite2D" parent="Backgraund/Back/ParallaxLayer"]
texture = ExtResource("3_6sbm7")

[node name="Stars" type="ParallaxBackground" parent="Backgraund"]
offset = Vector2(136, 80)
transform = Transform2D(1, 0, 0, 1, 136, 80)

[node name="ParallaxLayer" type="ParallaxLayer" parent="Backgraund/Stars"]

[node name="Sprite2D" type="Sprite2D" parent="Backgraund/Stars/ParallaxLayer"]
texture = ExtResource("4_bv78q")

[node name="Planet_1" type="ParallaxBackground" parent="Backgraund"]
offset = Vector2(136, 80)
transform = Transform2D(1, 0, 0, 1, 136, 80)

[node name="ParallaxLayer" type="ParallaxLayer" parent="Backgraund/Planet_1"]

[node name="Sprite2D" type="Sprite2D" parent="Backgraund/Planet_1/ParallaxLayer"]
texture = ExtResource("5_26dj7")

[node name="Planet_2" type="ParallaxBackground" parent="Backgraund"]
offset = Vector2(136, 80)
transform = Transform2D(1, 0, 0, 1, 136, 80)

[node name="ParallaxLayer" type="ParallaxLayer" parent="Backgraund/Planet_2"]

[node name="Sprite2D" type="Sprite2D" parent="Backgraund/Planet_2/ParallaxLayer"]
texture = ExtResource("5_26dj7")
offset = Vector2(272, 0)
flip_v = true

[node name="PathSpawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_6g2bm")

[node name="PathFollow2D" type="PathFollow2D" parent="PathSpawn"]
position = Vector2(272, 0)
rotation = 1.5708

[node name="Player" parent="." instance=ExtResource("6_jxs1i")]
position = Vector2(32, 88)

[node name="GUI" parent="." instance=ExtResource("8_10a4s")]

[connection signal="timeout" from="Settings/Timer" to="." method="_on_timer_timeout"]
